Just need to add the finishing touches

--- a/public/home.html
+++ b/public/home.html
@@ -26,7 +26,7 @@
       <div
         class="flex flex-col col-span-2 space-y-10 items-center font-semibold uppercase text-xs"
       >
-        <span class="text-white font-bold text-6xl">Today</span>
+        <span id="today-date" class="text-white font-bold text-5xl ">Today</span>
         <div class="stats">
           <span class="today-text">Temperature</span>
           <span id="temp-1" class="ml-2 text-white/55">10°C</span>
@@ -85,7 +85,7 @@
     </main>
     <footer class="text-black p-4 rounded-t-2xl flex gap-8 justify-center items-center footer-blur">
         <div class="card group">
-            <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-collection h-8 group-hover:text-orange-500 transition-colors duration-300" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-collection h-8 group-hover:text-orange-600 transition-colors duration-300" viewBox="0 0 16 16">
                 <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5z"/>
               </svg>
             <h1 class="text-center font-bold mb-4">Groups</h1>
